# SPA_django_forum

./: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/css/: documentation.css  forum.css  responsive.css  simple.css
frontend/public/js/: forum.js  main.js
frontend/src/api/: auth.js  index.js  posts.js  profile.js
frontend/src/components/: AppHeader.vue  PostCard.vue  TagSelector.vue  TopicForm.vue
frontend/src/composables/: useTopicForm.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: DocsPage.vue  ForumPage.vue  HomePage.vue  LoginPage.vue  ProfilePage.vue  RegisterPage.vue
src/docs/: urls.py  views.py
src/forum/: admin.py  api_views.py  forms.py  managers.py  models.py  schemas.py  urls.py  utils.py  views.py
src/forum/migrations/: 0001_initial.py  0002_alter_posts_code.py
src/homepage/: urls.py  views.py
src/lab1/templates/docs/: documentation.html
src/lab1/templates/forum/: forum.html
src/lab1/templates/homepage/: simple.html
src/lab1/templates/includes/: header.html
src/media/forum/code/: functions_CM5bHXo.py  ips.pyw  urls.py
src/src/: settings.py  urls.py
src/users/: api_views.py  apps.py  models.py  schemas.py  signals.py  urls.py  utils.py  views.py
src/users/migrations/: 0001_initial.py
