[project]
name = "langs-of-internet-prog-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-modern-rest[jwt,msgspec,pydantic]>=0.9.0",
    "psycopg2-binary>=2.9.11",
]
